# dprint-plugin-asciidoc

./: Cargo.toml  README.adoc  WALKTHROUGH.md  build.ps1  dprint-plugin-asciidoc.code-workspace  dprint.jsonc  schema.json
.github/workflows/: npm-publish.yml  release.yml  schema.yml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: configuration.adoc  index.adoc
npm/: README.md  index.d.ts  index.js  install.js  package.json
src/: configuration.rs  format.rs  lib.rs  main.rs
